<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mstorey.popmovies.MovieListActivity">
    <item
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/action_popular"
                android:checked="true"
                android:orderInCategory="100"
                android:title="@string/sort_popular"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_rated"
                android:orderInCategory="200"
                android:title="@string/sort_rated"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_favorite"
                android:orderInCategory="300"
                android:title="@string/sort_favorite"
                app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>