<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:showIn="@layout/details_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:contentDescription="@string/image_description"
                android:minHeight="@dimen/min_image_height" />

            <LinearLayout
                android:id="@+id/movie_detail_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_year_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year_title"
                    style="@style/DetailedMovieTextStyle" />

                <TextView
                    android:id="@+id/movie_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MovieTextStyle" />

                <TextView
                    android:id="@+id/movie_rating_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_title"
                    style="@style/DetailedMovieTextStyle" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MovieTextStyle" />

                <Button
                    android:id="@+id/fav_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/poster_height"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/favorite_selector"
                    android:drawablePadding="10dp"
                    android:text="@string/favorite_text_add" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/plot_section_title"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plot_section_title"
            style="@style/DetailedMovieTextStyle" />

        <TextView
            android:id="@+id/plot_label"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MovieTextStyle" />

        <include layout="@layout/detail_trailer_list_layout" />

        <include layout="@layout/detail_review_list_layout" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>